rules/dr-circuitbreaking.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 1
    outlierDetection:
      consecutiveErrors: 5
      interval: 1m
      baseEjectionTime: 2m
